--- a/QualityComics/QualityComics.html
+++ b/QualityComics/QualityComics.html
@@ -28,6 +28,40 @@
 <div class="mySlides" style="text-align: center;"><img src="Quality8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Quality9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Quality10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality44.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -48,52 +82,52 @@ Notable, long-running titles published by Quality include Blackhawk, Feature Com
 <li><a href="Quality7.jpg">Candy</a> (1947)
 <li><a href="../CrackComics/CrackComics.html">Crack Comics</a> (1940)
 <li><a href="Quality8.jpg">Crack Western</a> (1949)
-<li>Diary Loves (1949)
+<li><a href="Quality11.jpg">Diary Loves</a> (1949)
 <li><a href="../DollMan/DollMan.html">Doll Man</a> (1941)
 <li><a href="../Egbert/Egbert.html">Egbert</a> (1946)
 <li><a href="Quality9.jpg">Exotic Romances</a> (1955)
 <li><a href="Quality10.jpg">Exploits of Daniel Boone</a> (1955)
 <li><a href="../FeatureFunnies/FeatureFunnies.html">Feature Funnies</a> (1937)
-<li>Flaming Love (1949)
-<li>Forbidden Love (1950)
-<li>Gabby (1953–1954)
-<li>G.I. Combat #1–43 (1952–1956)
-<li>G.I. Sweethearts #32–45 (1953–1955)
-<li>Girls in Love #46–57 (1955–1956)
-<li>Heart Throbs #1–46 (1949)
-<li>Hickory #1-6 (1949–1950)
-<li>Hit Comics #1–65 (1940–1950)
-<li>Hollywood Diary #1–5 (1949–1950)
-<li>Hollywood Secrets #1–6 (1949–1950)
-<li>Intrigue #1 (1955)
-<li>Jonesy (1953–1954)
-<li>Ken Shannon #1–10 (1951–1953)
-<li>Kid Eternity #1–18 (1946–1949)
-<li>Lady Luck #86–90 (1949–1950)
-<li>Love Confessions #1–54 (1949–1956)
-<li>Love Diary #1 (1949)
-<li>Love Letters #1–51 (1949–1956)
-<li>Love Scandals #1–5 (1950)
-<li>Love Secrets #32–56 (1953–1956)
-<li>Marmaduke Mouse #1–65 (1946–1956)
-<li>Military Comics #1–43 (1941–1945)
-<li>Modern Comics #44–102 (1945–1950)
-<li>National Comics #1–75 (1940–1949)
-<li><a href="../PlasticMan/PlasticMan.html">Plastic Man</a> #1–64 (1943–1956)
-<li><a href="../PoliceComics/PoliceComics.html">Police Comics</a> #1–127 (1941–1953)
-<li>Range Romances #1–5 (1949–1950)
-<li>Robin Hood Tales #1–6 (1956)
-<li>Secret Loves #1–6 (1949–1950)
-<li><a href="../SmashComics/SmashComics.html">Smash Comics</a> #1–85 (1939–1949)
-<li>The Spirit #1–22 (1944–1950)
-<li>T-Man #1–38 (1951–1956)
-<li>Torchy 1–6 (1949–1950)
-<li>True War Romances #1–21 (1952–1955)
-<li>Uncle Sam Quarterly #1–8 (1941–1943)
-<li>Untamed Love #1–5 (1950)
-<li><a href="../WebOfEvil/WebOfEvil.html">Web of Evil</a> #1–21 (1952–1954)
-<li>Wedding Bells #1–19 (1954–1956)
-<li>Yanks in Battle #1–4 (1956)
+<li><a href="Quality12.jpg">Flaming Love</a> (1949)
+<li><a href="Quality13.jpg">Forbidden Love</a> (1950)
+<li><a href="Quality14.jpg">G.I. Combat</a> (1952)
+<li><a href="Quality15.jpg">G.I. Sweethearts</a> (1953)
+<li><a href="Quality16.jpg">Gabby</a> (1953)
+<li><a href="Quality17.jpg">Girls in Love</a> (1955)
+<li><a href="Quality18.jpg">Heart Throbs</a> (1949)
+<li><a href="Quality19.jpg">Hickory</a> (1949)
+<li><a href="../HitComics/HitComics.html">Hit Comics</a> (1940)
+<li><a href="Quality20.jpg">Hollywood Diary</a> (1949)
+<li><a href="Quality21.jpg">Hollywood Secrets</a> (1949)
+<li><a href="Quality22.jpg">Intrigue</a> (1955)
+<li><a href="Quality23.jpg">Jonesy</a> (1953)
+<li><a href="Quality24.jpg">Ken Shannon</a> (1951)
+<li><a href="Quality25.jpg">Kid Eternity</a> (1946)
+<li><a href="Quality26.jpg">Lady Luck</a> (1949)
+<li><a href="Quality27.jpg">Love Confessions</a> (1949)
+<li><a href="Quality28.jpg">Love Diary</a> (1949)
+<li><a href="Quality29.jpg">Love Letters</a> (1949)
+<li><a href="Quality30.jpg">Love Scandals</a> (1950)
+<li><a href="Quality31.jpg">Love Secrets</a> (1953)
+<li><a href="Quality32.jpg">Marmaduke Mouse</a> (1946)
+<li><a href="../MilitaryComics/MilitaryComics.html">Military Comics</a> (1941)
+<li><a href="Quality33.jpg">Modern Comics</a> (1945)
+<li><a href="../National/National.html">National Comics</a> (1940)
+<li><a href="../PlasticMan/PlasticMan.html">Plastic Man</a> (1943)
+<li><a href="../PoliceComics/PoliceComics.html">Police Comics</a> (1941)
+<li><a href="Quality34.jpg">Range Romances</a> (1949)
+<li><a href="Quality35.jpg">Robin Hood Tales</a> (1956)
+<li><a href="Quality36.jpg">Secret Loves</a> (1949)
+<li><a href="../SmashComics/SmashComics.html">Smash Comics</a> (1939)
+<li><a href="Quality37.jpg">Spirit</a> (1944)
+<li><a href="Quality38.jpg">T-Man</a> (1951)
+<li><a href="Quality39.jpg">Torchy</a> (1949)
+<li><a href="Quality40.jpg">True War Romances</a> (1952)
+<li><a href="Quality41.jpg">Uncle Sam Quarterly</a> (1941)
+<li><a href="Quality42.jpg">Untamed Love</a> (1950)
+<li><a href="../WebOfEvil/WebOfEvil.html">Web of Evil</a> (1952)
+<li><a href="Quality43.jpg">Wedding Bells</a> (1954)
+<li><a href="Quality44.jpg">Yanks in Battle</a> (1956)
 </p>
 </body>
 </html>
