--- a/Warren/Warren.html
+++ b/Warren/Warren.html
@@ -18,7 +18,16 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warren10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -34,23 +43,21 @@ After introducing what he called "Monster Comics" in Monster World, Warren expan
 <li><a href="../BlazingCombat/BlazingCombat.html">Blazing Combat</a> (1965)
 <li><a href="../ComixInternational/ComixInternational.html">Comix International</a> (1974)
 <li><a href="../Creepy/Creepy.html">Creepy</a> (1964)
-<li>Dracula (1972)
+<li><a href="Warren1.jpg">Dracula</a> (1972)
 <li><a href="../Eerie/Eerie.html">Eerie</a> (1966)
-<li>Famous Films (1964)
-<li>Famous Monsters of Filmland (1958)
-<li>Galactic Wars Comix (1978)
-<li>Goblin (1982)
+<li><a href="Warren2.jpg">Famous Monsters of Filmland</a> (1958)
+<li><a href="Warren3.jpg">Galactic Wars Comix (1978)
+<li><a href="Warren4.jpg">Goblin</a> (1982)
 <li><a href="../Help/Help.html">Help!</a> (1960)
+<li><a href="Warren10.jpg">Horror of Party Beach</a> (1964)
 <li><a href="../MonsterWorld/MonsterWorld.html">Monster World</a> (1964)
-<li>Mr. Chips and the Mystery of the Chocolate Mountain
-<li>Odd Comic World of Richard Corben (1977)
-<li>Rook (1979)
-<li>On The Scene / Freak Out USA (1967)
-<li>Screen Thrills Illustrated (1963)
+<li><a href="Warren5.jpg">Mr. Chips and the Mystery of the Chocolate Mountain</a> (1965)
+<li><a href="Warren6.jpg">Odd Comic World of Richard Corben</a> (1977)
+<li><a href="Warren7.jpg">Rook</a> (1979)
 <li><a href="../Spacemen/Spacemen.html">Spacemen</a> (1961)
 <li><a href="../Spirit/Spirit.html">The Spirit</a> (1974)
-<li>Teen Love Stories (1967)
-<li>U.F.O. and Alien Comix (1967)
+<li><a href="Warren8.jpg">Teen Love Stories</a> (1967)
+<li><a href="Warren9.jpg">U.F.O. and Alien Comix</a> (1967)
 <li><a href="../Vampirella/Vampirella.html">Vampirella</a> (1969)
 <li><a href="../WarrenPresents/WarrenPresents.html">Warren Presents</a> (1969)
 
