--- a/OniPress/OniPress.html
+++ b/OniPress/OniPress.html
@@ -19,6 +19,7 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="OniPress1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress4.jpg"></div>
@@ -41,6 +42,7 @@ Schreck left the company in 1999, and Oni Press is currently owned by Nozemack, 
 </p><p>
 Titles
 </p><p>
+<li><a href="OniPress13.jpg">12 Reasons Why I Love Her</a> (2006)
 <li><a href="OniPress2.jpg">Adventures of Barry Ween, Boy Genius</a> (1999)
 <li><a href="OniPress5.jpg">Aggretsuko</a> (2020)
 <li><a href="OniPress3.jpg">Alabaster Shadows</a> (2015)
@@ -52,51 +54,44 @@ Titles
 <li><a href="OniPress11.jpg">Auteur</a> (2014)
 <li><a href="OniPress10.jpg">Awakening</a> (2004)
 <li><a href="OniPress12.jpg">Bad Boy</a> (1999)
-<li>Bad Ideas by Jim Mahfood, Wayne Chinsang and Dave Crosland
-<li>Bad Medicine by Christina Weir, Nunzio DeFilippis, and Christopher Mitten
-<li>Black Metal by Rick Spear and Chuck BB
-<li>Blair Witch Chronicles by Jen Van Meter and Guy Davis
-<li>Blue Monday by Chynna Clugston
-<li>Borrowed Time by Neal Shaffer and Joe Infurnari
-<li>Breakfast After Noon by Andi Watson
-<li>Bunker by Josh Fialkov and Joe Infurnari
-<li>Capote in Kansas by Ande Parks and Chris Samnee
-<li>Cheat by Christine Norrie
-<li>Clerks. by Kevin Smith
-<li>Closer by Antony Johnston and Mike Norton
-<li>Coffin by Phil Hester and Mike Huddleston
-<li>Courtney Crumrin by Ted Naifeh
-<li>Crogan's Vengeance by Chris Schweizer
-<li>Crogan's March by Chris Schweizer
-<li>Crogan's Loyalty by Chris Schweizer
-<li>Cut my Hair by Jamie S Rich
-<li>Damned by Cullen Bunn and Brian Hurtt
-<li>Days Like This by J. Torres and Scott Chantler
-<li>Dead Goombas by J. Torres and Andy B.
-<li>Deep Sleeper by Phil Hester and Mike Huddleston
-<li>Dumped by Andi Watson
-<li>F-Stop by Antony Johnston and Matthew Loux
-<li>Fortune and Glory by Brian Michael Bendis
-<li>Frenemy of the State by Rashida Jones, Nunzio DeFilippis and Christina Weir
-<li>Frumpy the Clown by Judd Winick
-<li>Geisha by Andi Watson
-<li>Grrl Scouts by Jim Mahfood
-<li>Guerillas by Brahm Revel
-<li>Hopeless Savages by Jen Van Meter
-<li>Hysteria by Mike Hawthorne
-<li>Invader Zim by Jhonen Vasquez
-<li>Jason and the Argobots by J Torres and Mike Norton
-<li>Jay and Silent Bob by Kevin Smith and Duncan Fegredo
-<li>Jingle Belle by Paul Dini
-<li>Julius by Antony Johnston and Brett Weldele
-<li>Kaijumax by Zander Cannon
-<li>Killer Princesses by Gail Simone and Lea Hernandez
-<li>Kim Reaper by Sarah Graley[6]
-<li>Kissing Chaos by Arthur Dela Cruz
-<li>Last Exit Before Toll by Neal Shaffer and Chris Mitten
-<li>Leading Man by B. Clay Moore and Jeremy Haun
-<li>Letter 44 by Charles Soule and Alberto Jimenez Alburquerque
-<li>Local by Brian Wood and Ryan Kelly
+<li><a href="OniPress14.jpg">Bad Machinery</a> (2013)
+<li><a href="OniPress15.jpg">Bad Medicine</a> (2012)
+<li><a href="OniPress16.jpg">Ballad of Sang</a> (2018)
+<li><a href="OniPress17.jpg">Blair Witch Chronicles</a>
+<li><a href="OniPress18.jpg">Blue Monday</a> (2001)
+<li><a href="OniPress19.jpg">Borrowed Time</a> (2006)
+<li><a href="OniPress20.jpg">Breakfast After Noon</a> (2000)
+<li><a href="OniPress21.jpg">Bunker</a> (2014)
+<li><a href="OniPress22.jpg">Capote in Kansas</a> (2007)
+<li><a href="OniPress23.jpg">Cheat</a> (2003)
+<li><a href="OniPress24.jpg">Clerks</a> (1999)
+<li><a href="OniPress25.jpg">Coffin</a> (2000)
+<li><a href="OniPress26.jpg">Courtney Crumrin</a> (2012)
+<li><a href="OniPress27.jpg">Crogan's Adventures</a> (2015)
+<li><a href="OniPress28.jpg">Damned</a> (2006)
+<li><a href="OniPress29.jpg">Days Like This</a> (2003)
+<li><a href="OniPress30.jpg">Dead of Winter</a> (2017)
+<li><a href="OniPress31.jpg">Deep Sleeper</a> (2004)
+<li><a href="OniPress32.jpg">Dumped</a> (2002)
+<li><a href="OniPress33.jpg">Fortune and Glory</a> (1999)
+<li><a href="OniPress34.jpg">Frenemy of the State</a> (2010)
+<li><a href="OniPress35.jpg">Frumpy the Clown</a> (2001)
+<li><a href="OniPress36.jpg">Geisha</a> (1998)
+<li><a href="OniPress37.jpg">Guerillas</a> (2012)
+<li><a href="OniPress38.jpg">Hopeless Savages</a> (2001)
+<li><a href="OniPress39.jpg">Hysteria</a> (2005)
+<li><a href="OniPress40.jpg">Invader Zim</a> (2015)
+<li><a href="OniPress41.jpg">Jason and the Argobots</a> (2002)
+<li><a href="OniPress42.jpg">Jay and Silent Bob</a> (1998)
+<li><a href="OniPress43.jpg">Jingle Belle</a> (1999)
+<li><a href="OniPress44.jpg">Junior Braves of the Apocalypse</a> (2015)
+<li><a href="OniPress45.jpg">Kaijumax</a> (2015)
+<li><a href="OniPress46.jpg">Kim Reaper</a> (2017)
+<li><a href="OniPress47.jpg">Kissing Chaos</a> (2001)
+<li><a href="OniPress48.jpg">Last Exit Before Toll</a> (2003)
+<li><a href="OniPress49.jpg">Leading Man</a> (2006)
+<li><a href="OniPress50.jpg">Letter 44</a> (2013)
+<li><a href="OniPress51.jpg">Local</a> (2005)
 <li>Long Haul by Antony Johnston and Eduardo Barreto
 <li>Lost at Sea by Bryan Lee O'Malley
 <li>Love As A Foreign Language by J. Torres and Eric Kim
