--- a/OniPress/OniPress.html
+++ b/OniPress/OniPress.html
@@ -31,6 +31,91 @@
 <div class="mySlides" style="text-align: center;"><img src="OniPress10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress76.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress79.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress82.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress83.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress84.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress85.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress86.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress87.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress88.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress89.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress90.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress91.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress92.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress93.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress94.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress95.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress96.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress97.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -48,6 +133,7 @@ Titles
 <li><a href="OniPress3.jpg">Alabaster Shadows</a> (2015)
 <li><a href="OniPress4.jpg">Alison Dare</a> (2002)
 <li><a href="OniPress6.jpg">Altered History of Willow Sparks</a> (2018)
+<li><a href="OniPress52.jpg">Angel City</a> (2016)
 <li><a href="OniPress7.jpg">Amado, Cho &amp; Adlard's Nobody</a> (1998)
 <li><a href="OniPress8.jpg">Apocalipstix</a> (2008)
 <li><a href="OniPress9.jpg">Atomic City Tales</a> (2002)
@@ -92,68 +178,53 @@ Titles
 <li><a href="OniPress49.jpg">Leading Man</a> (2006)
 <li><a href="OniPress50.jpg">Letter 44</a> (2013)
 <li><a href="OniPress51.jpg">Local</a> (2005)
-<li>Long Haul by Antony Johnston and Eduardo Barreto
-<li>Lost at Sea by Bryan Lee O'Malley
-<li>Love As A Foreign Language by J. Torres and Eric Kim
-<li>Love Fights by Andi Watson
-<li>Madman by Mike Allred
-<li>Maintenance by Jim Massey and Robbi Rodriguez
-<li>Maria's Wedding by Nunzio DeFilippis, Christina Weir and Jose Garibaldi
-<li>Marquis by Guy Davis
-<li>Midnight Mover by Gary Phillips, Jeremy Love and Jeff Wasson
-<li>Mutant, Texas: Tales of Sheriff Ida Red by Paul Dini and J Bone
-<li>My Inner Bimbo by Sam Kieth
-<li>Nocturnals by Dan Brereton
-<li>No Dead Time by Brian McLachlan and Tom Williams
-<li>Northwest Passage by Scott Chantler
-<li>North World by Lars Brown
-<li>Oddville by Jay Stephens
-<li>Off Road by Sean Murphy
-<li>Ojo by Sam Kieth
-<li>Once in a Blue Moon by Nunzio DeFilippis and Christina Weir
-<li>One Bad Day by Steve Rolston
-<li>One Plus One by Neal Shaffer and Daniel Krall
-<li>Oni Double Feature
-<li>PENG by Corey Lewis
-<li>Play Ball by Christina Weir and Nunzio DeFilippis
-<li>Polly and the Pirates by Ted Naifeh
-<li>Pounded by Brian Wood and Steve Rolston
-<li>Princess Ugg by Ted Naifeh
-<li>Puffed by John Layman and Dave Crosland
-<li>Queen &amp; Country by Greg Rucka and various
-<li>Resurrection by Marc Guggenheim and David Dumeer
-<li>Rick and Morty by Justin Roiland and Dan Harmon
-<li>Scandalous by J Torres and Scott Chantler
-<li>Scooter Girl by Chynna Clugston
-<li>Scott Pilgrim by Bryan Lee O'Malley
-<li>Secret History of D.B. Cooper by Brian Churilla
-<li>Sharknife by Corey Lewis
-<li>Shenanigans by Ian Shaughnessy and Mike Holmes
-<li>Shot Callerz by Gary Phillips and Brett Weldele
-<li>Sidekicks by J. Torres and Takeshi Miyazawa
-<li>SideScrollers by Matthew Loux
-<li>Sixth Gun by Cullen Bunn and Brian Hurtt[8][9]
-<li>Skinwalker by Nunzio DeFilippis, Christina Weir and Brian Hurtt
-<li>Soulwind by Scott Morse
-<li>Space Battle Lunchtime by Natalie Riess
-<li>Spaghetti Western by Scott Morse
-<li>Spell Checkers by Joëlle Jones, Jamie S. Rich &amp; Nico Hitori de
-<li>Spooked by Antony Johnston and Sophie Campbell
+<li><a href="OniPress53.jpg">Long Haul</a> (2005)
+<li><a href="OniPress54.jpg">Lost at Sea</a>
+<li><a href="OniPress55.jpg">Love As A Foreign Language</a> (2006)
+<li><a href="OniPress56.jpg">Love Fights</a> (2003)
+<li><a href="OniPress57.jpg">Madman</a> (2003)
+<li><a href="OniPress58.jpg">Maintenance</a> (2006)
+<li><a href="OniPress59.jpg">Marquis</a> (2001)
+<li><a href="OniPress60.jpg">Midnight Mover</a> (2003)
+<li><a href="OniPress61.jpg">Mutant, Texas: Tales of Sheriff Ida Red</a> (2002)
+<li><a href="OniPress62.jpg">My Inner Bimbo</a> (2006)
+<li><a href="OniPress64.jpg">Nights Dominion</a> (2016)
+<li><a href="OniPress63.jpg">Nocturnals</a> (2001)
+<li><a href="OniPress66.jpg">North World</a> (2008)
+<li><a href="OniPress65.jpg">Northwest Passage</a> (2005)
+<li><a href="OniPress67.jpg">Off Road</a> (2005)
+<li><a href="OniPress68.jpg">Ojo</a> (2004)
+<li><a href="OniPress69.jpg">Once in a Blue Moon</a> (2004)
+<li><a href="OniPress70.jpg">Oni Double Feature</a> (1998)
+<li><a href="OniPress71.jpg">Oni Press Color Special</a> (2001)
+<li><a href="OniPress72.jpg">Polly and the Pirates</a> (2005)
+<li><a href="OniPress73.jpg">Pounded</a> (2002)
+<li><a href="OniPress74.jpg">Princess Ugg</a> (2014)
+<li><a href="OniPress75.jpg">Queen &amp; Country</a> (2001)
+<li><a href="OniPress76.jpg">Resurrection</a> (2007)
+<li><a href="OniPress77.jpg">Rick and Morty</a> (2015)
+<li><a href="OniPress78.jpg">Scott Pilgrim</a> (2008)
+<li><a href="OniPress79.jpg">Secret History of D.B. Cooper</a> (2012)
+<li><a href="OniPress80.jpg">Sharknife</a> (2005)
+<li><a href="OniPress81.jpg">Shenanigans</a> (2007)
+<li><a href="OniPress82.jpg">Sidekicks</a> (2002)
+<li><a href="OniPress83.jpg">SideScrollers</a> (2006)
+<li><a href="OniPress84.jpg">Sixth Gun</a> (2010)
+<li><a href="OniPress85.jpg">Skinwalker</a> (2002)
+<li><a href="OniPress86.jpg">Soulwind</a> (2000)
+<li><a href="OniPress87.jpg">Space Battle Lunchtime</a> (2016)
+<li><a href="OniPress88.jpg">Spaghetti Western</a> (2004)
+<li><a href="OniPress89.jpg">Spell Checkers</a> (2010)
+<li><a href="OniPress98.jpg">Stephen Colbert's Tek Jansen Adventures</a> (2008)
 <li><a href="../Stumptown/Stumptown.html">Stumptown</a> by Greg Rucka and Matthew Southworth
-<li>Strangetown by Chynna Clugston and Ian Shaughnessy
-<li>Super Pro K.O.! by Jarrett Williams
-<li>Tales of Ordinary Madness by Malcolm Bourne and Mike Allred
-<li>Tek Jansen (Stephen Colbert's Tek Jansen Adventures) by John Layman, Tom Peyer and Jim Massey
-<li>Three Days in Europe by Antony Johnston and Mike Hawthorne
-<li>Three Strikes by Nunzio DeFilippis, Christina Weir and Brian Hurtt
-<li>The Tomb by Nunzio DeFilippis, Christina Weir and Chris Mitten
-<li>Union Station by Ande Parks and Eduardo Barreto
-<li>Visitations by Scott Morse
-<li>Volcanic Revolver by Scott Morse
-<li>Wasteland by Antony Johnston and Christopher Mitten
-<li>Wet Moon by Sophie Campbell
-<li>Whiteout by Greg Rucka and Steve Lieber
-<li>Whiteout: Melt by Greg Rucka and Steve Lieber
+<li><a href="OniPress90.jpg">Strangetown</a> (2006)
+<li><a href="OniPress91.jpg">Three Days in Europe</a> (2002)
+<li><a href="OniPress92.jpg">Tomb</a> (2004)
+<li><a href="OniPress93.jpg">Union Station</a> (2003)
+<li><a href="OniPress94.jpg">Volcanic Revolver</a> (1999)
+<li><a href="OniPress95.jpg">Wasteland</a> (2006)
+<li><a href="OniPress96.jpg">Wet Moon</a> (2004)
+<li><a href="OniPress97.jpg">Whiteout</a> (1998)
 </p>
 
 </body>
