--- a/AWaveBlueWorld/AWaveBlueWorld.html
+++ b/AWaveBlueWorld/AWaveBlueWorld.html
@@ -38,16 +38,16 @@
 </p><p>
 Titles
 </p><p>
-<li>27 Run (2018)
-<li>Adrenaline 	(2006)
-<li>All We Ever Wanted (2018)
-<li>American Terrorist (2019)
-<li>From Hell's Heart (2019)
-<li>Gastly Tales (2019)
-<li>Kids Stick Together (2018)
-<li>Loved & Lost (2019)
-<li>Mezo (2018)
-<li>This Nightmare Kills Fascists (2018) 
+<li><a href="27Run.jpg">27 Run</a> (2018)
+<li><a href="Adrenaline.jpg">Adrenaline</a> 	(2006)
+<li><a href="AllWeEverWanted.jpg">All We Ever Wanted</a> (2018)
+<li><a href="AmericanTerrorist.jpg">American Terrorist</a> (2019)
+<li><a href="FromHellsHeart.jpg">From Hell's Heart</a> (2019)
+<li><a href="GastlyTales.jpg">Gastly Tales</a> (2019)
+<li><a href="KidsStickTogether.jpg">Kids Stick Together</a> (2018)
+<li><a href="LovedAndLost.jpg">Loved & Lost</a> (2019)
+<li><a href="Mezo.jpg">Mezo</a> (2018)
+<li><a href="ThisNightmare.jpg">This Nightmare Kills Fascists</a> (2018) 
 </p>
 
 </body>
